change font miracle

--- a/index-page-1.html
+++ b/index-page-1.html
@@ -10,7 +10,34 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="best-apartments">
+      <div class="best-apartments__img">
+        <h3 class="best-apartments__title">Best
+          apartments</h3>
+        <p class="best-apartments__text">All room decoration was made with ecological certified and safe materials.</p>
+      </div>
+    </div>
 
+
+    <div class="our-gallery">
+      <span class="our-gallery__text-element-left">Art & Congress hall</span>
+      <img src="/assets/img/img-page-1/label-premim-rooms.png" alt="logo" class="our-gallery__logo">
+      <h3 class="our-gallery__title">our Gallery</h3>
+      <img src="/assets/img/img-page-1/img-bench.png" alt="img" class="our-gallery__img-bench">
+      <p class="our-gallery__text-element-center">Explore our spacious rooms with the gorgeous view to the historical
+        part
+        of
+        the city. Each room has an
+        exclusive interior design decorated with modern art pieces that will make your stay unforgettable. </p>
+      <img src="/assets/img/img-page-1/img-lobby.png" alt="img" class="our-gallery__img-lobby">
+
+
+    </div>
+
+
+
+  </div>
 </body>
 
 </html>
