added block <our galery>

--- a/index-page-1.html
+++ b/index-page-1.html
@@ -22,17 +22,46 @@
 
     <div class="our-gallery">
       <span class="our-gallery__text-element-left">Art & Congress hall</span>
-      <img src="/assets/img/img-page-1/label-premim-rooms.png" alt="logo" class="our-gallery__logo">
-      <h3 class="our-gallery__title">our Gallery</h3>
+
+      <div class="our-gallery__center-section">
+        <img src="/assets/img/img-page-1/label-premim-rooms.png" alt="logo" class="our-gallery__logo">
+        <h3 class="our-gallery__title">our Gallery</h3>
+        <p class="our-gallery__text-element">Explore our spacious rooms with the gorgeous view to the historical
+          part
+          of
+          the city. Each room has an
+          exclusive interior design decorated with modern art pieces that will make your stay unforgettable.</p>
+        <img src="/assets/img/img-page-1/img-fireplace.png" alt="img" class="our-gallery__fireplace">
+
+        <div class="our-gallery__octagon-text">
+          <img src="/assets/img/img-page-1/label-octagon-yellow.png" alt="img"
+            class="our-gallery__label-octagon-yellow">
+          <p class="our-gallery__text-element-near-octagon">It is our pleasure to meet your most unrealistic
+            expectations.</p>
+        </div>
+
+
+      </div>
+
       <img src="/assets/img/img-page-1/img-bench.png" alt="img" class="our-gallery__img-bench">
-      <p class="our-gallery__text-element-center">Explore our spacious rooms with the gorgeous view to the historical
-        part
-        of
-        the city. Each room has an
-        exclusive interior design decorated with modern art pieces that will make your stay unforgettable. </p>
       <img src="/assets/img/img-page-1/img-lobby.png" alt="img" class="our-gallery__img-lobby">
 
-
+      <img src="/assets/img/img-page-1/img-dining-area.png" alt="img" class="our-gallery__dining-area">
+      <img src="/assets/img/img-page-1/img-bathroom-mirror.png" alt="img" class="our-gallery__bathroom-mirror">
+      <!--<p class="our-gallery__background-text">Bank hotel <span
+          class="our-gallery__background-text-visible">Bank__hotel©</span> Bank hotel Bank hotel Bank hotel Bank hotel
+        Bank hotel
+        Bank hotel</p>-->
+      <div class="our-gallery__background-text">
+        <span>Bank hotel </span>
+        <span>Bank__hotel© </span>
+        <span>Bank hotel </span>
+        <span>Bank hotel </span>
+        <span>Bank hotel </span>
+        <span>Bank hotel </span>
+        <span>Bank hotel </span>
+        <span>Bank hotel </span>
+      </div>
     </div>
 
 
