--- a/index-page-1.html
+++ b/index-page-1.html
@@ -10,6 +10,110 @@
 </head>
 
 <body>
+  <div class="global-wrapper">
+    <div class="menu">
+      <p class="menu__name">BankHotel</p>
+      <input class="menu__burger" type="checkbox" id="burger" />
+      <label class="menu__br-lable" for="burger"></label>
+      <nav class="menu__nav">
+        <ul class="menu__list">
+          <li class="menu__item"><a class="menu__link" href="#"> Home</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Rooms</a></li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Restaurant</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Conference hall</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <p class="menu__tel">+38 032 297 50 20</p>
+    </div>
+  
+    <header class="header">
+      <div class="header__title-wrap">
+        <div class="header__title">
+          <h2 class="header__title-1">Bank</h2>
+          <h2 class="header__title-2">Hotel</h2>
+        </div>
+        <input class="btn" type="button" value="since 1973" />
+        <p class="header__desc">
+          rooms // restaurant // congress hall // wine bar
+        </p>
+        <hr />
+        <p class="header__text">
+          The luxurious hotel in the most beautiful European city with an
+          exclusive restaurant, conference-hall, and art-bar.
+        </p>
+      </div>
+    </header>
+  
+    <div class="hd-container">
+      <div class="hd-container__list">
+        <input
+          class="hd-container__btn hd-container__btn_first"
+          type="button"
+          value="Check in"
+        />
+        <input
+          class="hd-container__btn hd-container__btn_second"
+          type="button"
+          value="Check out"
+        />
+        <input
+          class="hd-container__btn hd-container__btn_orange"
+          type="button"
+          value="book room"
+        />
+        <a class="hd-container__btn375" href="#"> <p>book room</p></a>
+      </div>
+      <div class="hd-container__contacts">
+        <p class="hd-container__tel">+38 032 297 50 20</p>
+        <p class="hd-container__address">8 Lystopadovoho Chynu,Lviv</p>
+      </div>
+      <div class="hd-container__inf">
+        <p class="hd-container__des1">Art & Congress</p>
+        <p class="hd-container__des2">hall</p>
+      </div>
+    </div>
+  
+    <div class="about">
+      <img
+        class="about__room about__room_big"
+        src="./assets/img/img-page-1/img-peception-1.png"
+        alt="room"
+      />
+      <div class="about__info">
+        <h2 class="about__name-about">About</h2>
+        <h2 class="about__name-us">US</h2>
+        <h3 class="about__subtitle">High quality</h3>
+        <p class="about__text">
+          The five-star Bank Hotel was reopened to visitors in 2016. The building
+          was renovated and modernized to meet the expectations of the most
+          demanding guests. We offer luxurious rooms, numerous facilities, and
+          exceptional service.
+        </p>
+      </div>
+      <div class="about__pic-btn">
+        <img
+          class="about__room about__room_small"
+          src="./assets/img/img-page-1/img-peception-2.png"
+          alt="room"
+        />
+        <button class="about__btn">
+          <p class="about__des about__des_orange">Rooms</p>
+          <p class="about__des">and</p>
+          <p class="about__des">apartments</p>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  
   <div class="container">
     <div class="best-apartments">
       <div class="best-apartments__img">
