$fonts, header-main-footer(part 1)
$fonts, header-main-footer(part 1)

--- a/index-page-1.html
+++ b/index-page-1.html
@@ -1,211 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BankHotel</title>
-    <link rel="stylesheet" href="./style/style-page-1/style-page-1.css" />
-  </head>
 
-  <body>
-    <div class="menu">
-      <p class="menu__name">BankHotel</p>
-      <input class="menu__burger" type="checkbox" id="burger" />
-      <label class="menu__br-lable" for="burger"></label>
-      <nav class="menu__nav">
-        <ul class="menu__list">
-          <li class="menu__item"><a class="menu__link" href="#"> Home</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Rooms</a></li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Restaurant</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Conference hall</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <p class="menu__tel">+38 032 297 50 20</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BankHotel</title>
+  <link rel="stylesheet" href="/style/style-page-1/style-page-1.css" />
+</head>
+
+<body>
+  <div class="menu">
+    <p class="menu__name">BankHotel</p>
+    <input class="menu__burger" type="checkbox" id="burger" />
+    <label class="menu__br-lable" for="burger"></label>
+    <nav class="menu__nav">
+      <ul class="menu__list">
+        <li class="menu__item"><a class="menu__link" href="#"> Home</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Rooms</a></li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Restaurant</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Conference hall</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+    <p class="menu__tel">+38 032 297 50 20</p>
+  </div>
+
+  <header class="header">
+    <div class="header__title-wrap">
+      <div class="header__title">
+        <h2 class="header__title-1">Bank</h2>
+        <h2 class="header__title-2">Hotel</h2>
+      </div>
+      <button class="header__button">
+        <p>since 1973</p>
+      </button>
+      <p class="header__desc">
+        rooms // restaurant // congress hall // wine bar
+      </p>
+      <hr />
+      <p class="header__text">
+        The luxurious hotel in the most beautiful European city with an
+        exclusive restaurant, conference-hall, and art-bar.
+      </p>
     </div>
 
-    <header class="header">
-      <div class="header__title-wrap">
-        <div class="header__title">
-          <h2 class="header__title-1">Bank</h2>
-          <h2 class="header__title-2">Hotel</h2>
+    <div class="hd-container">
+      <div class="hd-container__list">
+        <button class="hd-container__btn hd-container__btn_first">
+          <p>Check in</p>
+        </button>
+        <button class="hd-container__btn hd-container__btn_second">
+          <p>Check out</p>
+        </button>
+        <button class="hd-container__btn hd-container__btn_orange">
+          <p>book room</p>
+        </button>
+        <a href="#" class="hd-container__btn375">
+          <p>book room</p>
+        </a>
+      </div>
+      <div class="hd-container__contacts">
+        <p class="hd-container__tel">+38 032 297 50 20</p>
+        <p class="hd-container__address">8 Lystopadovoho Chynu,Lviv</p>
+      </div>
+      <div class="hd-container__inf">
+        <p class="hd-container__desc1">Art & Congress</p>
+        <p class="hd-container__desc2">hall</p>
+      </div>
+    </div>
+  </header>
+
+  <div class="about">
+    <div class="about__wrap">
+      <img class="about__room about__room_big" src="./assets/img/img-page-1/img-peception-1.png" alt="room" />
+      <div class="about__info">
+        <div class="about__name">
+          <h2 class="about__name-about">About</h2>
+          <h2 class="about__name-us">US</h2>
         </div>
-        <button class="header__button"><p>since 1973</p></button>
-        <p class="header__desc">
-          rooms // restaurant // congress hall // wine bar
+        <h3 class="about__subtitle">High quality</h3>
+        <p class="about__text about__text_big">
+          The five-star Bank Hotel was reopened to visitors in 2016. The
+          building was renovated and modernized to meet the expectations of
+          the most demanding guests. We offer luxurious rooms, numerous
+          facilities, and exceptional service.
         </p>
-        <hr />
-        <p class="header__text">
-          The luxurious hotel in the most beautiful European city with an
-          exclusive restaurant, conference-hall, and art-bar.
+        <p class="about__text about__text_small">
+          The hotel was reopened to visitors in 2016. The building was
+          renovated and modernized to meet the expectations of the most
+          demanding guests. We offer luxurious rooms, numerous facilities, and
+          exceptional service.
         </p>
       </div>
-
-      <div class="hd-container">
-        <div class="hd-container__list">
-          <button class="hd-container__btn hd-container__btn_first">
-            <p>Check in</p>
-          </button>
-          <button class="hd-container__btn hd-container__btn_second">
-            <p>Check out</p>
-          </button>
-          <button class="hd-container__btn hd-container__btn_orange">
-            <p>book room</p>
-          </button>
-          <a href="#" class="hd-container__btn375"><p>book room</p></a>
-        </div>
-        <div class="hd-container__contacts">
-          <p class="hd-container__tel">+38 032 297 50 20</p>
-          <p class="hd-container__address">8 Lystopadovoho Chynu,Lviv</p>
-        </div>
-        <div class="hd-container__inf">
-          <p class="hd-container__desc1">Art & Congress</p>
-          <p class="hd-container__desc2">hall</p>
-        </div>
+      <div class="about__pic-btn">
+        <img class="about__room about__room_small" src="./assets/img/img-page-1/img-peception-2.png" alt="room" />
+        <button class="about__btn">
+          <p class="about__des about__des_orange">Rooms</p>
+          <p class="about__des">and</p>
+          <p class="about__des">apartments</p>
+          <img class="about__arrow" src="./assets/img/img-page-1/label-arrow-bottom.png" />
+        </button>
       </div>
-    </header>
+      <h3 class="about__subtitle about__subtitle_last">High quality</h3>
+      <p class="about__text about__text_last">
+        The hotel was reopened to visitors in 2016. The building was renovated
+        and modernized to meet the expectations of the most demanding guests.
+        We offer luxurious rooms, numerous facilities, and exceptional
+        service.
+      </p>
+    </div>
+  </div>
 
-    <div class="about">
-      <div class="about__wrap">
-        <img
-          class="about__room about__room_big"
-          src="./assets/img/img-page-1/img-peception-1.png"
-          alt="room"
-        />
-        <div class="about__info">
-          <div class="about__name">
-            <h2 class="about__name-about">About</h2>
-            <h2 class="about__name-us">US</h2>
-          </div>
-          <h3 class="about__subtitle">High quality</h3>
-          <p class="about__text about__text_big">
-            The five-star Bank Hotel was reopened to visitors in 2016. The
-            building was renovated and modernized to meet the expectations of
-            the most demanding guests. We offer luxurious rooms, numerous
-            facilities, and exceptional service.
-          </p>
-          <p class="about__text about__text_small">
-            The hotel was reopened to visitors in 2016. The building was
-            renovated and modernized to meet the expectations of the most
-            demanding guests. We offer luxurious rooms, numerous facilities, and
-            exceptional service.
-          </p>
-        </div>
-        <div class="about__pic-btn">
-          <img
-            class="about__room about__room_small"
-            src="./assets/img/img-page-1/img-peception-2.png"
-            alt="room"
-          />
-          <button class="about__btn">
-            <p class="about__des about__des_orange">Rooms</p>
-            <p class="about__des">and</p>
-            <p class="about__des">apartments</p>
-            <img
-              class="about__arrow"
-              src="./assets/img/img-page-1/label-arrow-bottom.png"
-            />
-          </button>
-        </div>
-        <h3 class="about__subtitle about__subtitle_last">High quality</h3>
-        <p class="about__text about__text_last">
-          The hotel was reopened to visitors in 2016. The building was renovated
-          and modernized to meet the expectations of the most demanding guests.
-          We offer luxurious rooms, numerous facilities, and exceptional
-          service.
+  <div class="container">
+    <div class="best-apartments">
+      <div class="best-apartments__img">
+        <h3 class="best-apartments__title">Best apartments</h3>
+        <p class="best-apartments__text">
+          All room decoration was made with ecological certified and safe
+          materials.
         </p>
       </div>
     </div>
 
-    <div class="container">
-      <div class="best-apartments">
-        <div class="best-apartments__img">
-          <h3 class="best-apartments__title">Best apartments</h3>
-          <p class="best-apartments__text">
-            All room decoration was made with ecological certified and safe
-            materials.
+    <div class="our-gallery">
+      <span class="our-gallery__text-element-left">Art & Congress hall</span>
+
+      <div class="our-gallery__center-section">
+        <div class="our-gallery__logo">
+          <img src="/assets/img/img-page-1/label-premim-rooms.png" alt="logo" class="our-gallery__img-logo" />
+        </div>
+        <h3 class="our-gallery__title">our Gallery</h3>
+        <p class="our-gallery__text-element">
+          Explore our spacious rooms with the gorgeous view to the historical
+          part of the city. Each room has an exclusive interior design
+          decorated with modern art pieces that will make your stay
+          unforgettable.
+        </p>
+        <div class="our-gallery__fireplace">
+          <img src="/assets/img/img-page-1/img-fireplace.png" alt="img" class="our-gallery__img-fireplace" />
+        </div>
+
+
+        <div class="our-gallery__octagon-text">
+          <img src="/assets/img/img-page-1/label-octagon-yellow.png" alt="img"
+            class="our-gallery__label-octagon-yellow" />
+          <p class="our-gallery__text-element-near-octagon">
+            It is our pleasure to meet your most unrealistic expectations.
           </p>
         </div>
       </div>
 
-      <div class="our-gallery">
-        <span class="our-gallery__text-element-left">Art & Congress hall</span>
 
-        <div class="our-gallery__center-section">
-          <img
-            src="/assets/img/img-page-1/label-premim-rooms.png"
-            alt="logo"
-            class="our-gallery__logo"
-          />
-          <h3 class="our-gallery__title">our Gallery</h3>
-          <p class="our-gallery__text-element">
-            Explore our spacious rooms with the gorgeous view to the historical
-            part of the city. Each room has an exclusive interior design
-            decorated with modern art pieces that will make your stay
-            unforgettable.
-          </p>
-          <img
-            src="/assets/img/img-page-1/img-fireplace.png"
-            alt="img"
-            class="our-gallery__fireplace"
-          />
 
-          <div class="our-gallery__octagon-text">
-            <img
-              src="/assets/img/img-page-1/label-octagon-yellow.png"
-              alt="img"
-              class="our-gallery__label-octagon-yellow"
-            />
-            <p class="our-gallery__text-element-near-octagon">
-              It is our pleasure to meet your most unrealistic expectations.
-            </p>
-          </div>
-        </div>
-
-        <img
-          src="/assets/img/img-page-1/img-bench.png"
-          alt="img"
-          class="our-gallery__img-bench"
-        />
-        <img
-          src="/assets/img/img-page-1/img-lobby.png"
-          alt="img"
-          class="our-gallery__img-lobby"
-        />
-
-        <img
-          src="/assets/img/img-page-1/img-dining-area.png"
-          alt="img"
-          class="our-gallery__dining-area"
-        />
-        <img
-          src="/assets/img/img-page-1/img-bathroom-mirror.png"
-          alt="img"
-          class="our-gallery__bathroom-mirror"
-        />
-        <!--<p class="our-gallery__background-text">Bank hotel <span
-          class="our-gallery__background-text-visible">Bank__hotel©</span> Bank hotel Bank hotel Bank hotel Bank hotel
-        Bank hotel
-        Bank hotel</p>-->
-        <div class="our-gallery__background-text">
-          <span>Bank hotel </span>
-          <span>Bank__hotel© </span>
-          <span>Bank hotel </span>
-          <span>Bank hotel </span>
-          <span>Bank hotel </span>
-          <span>Bank hotel </span>
-          <span>Bank hotel </span>
-          <span>Bank hotel </span>
-        </div>
+      <div class="our-gallery__bench">
+        <img src="/assets/img/img-page-1/img-bench.png" alt="img" class="our-gallery__img-bench" />
       </div>
+
+      <div class="our-gallery__lobby">
+        <img src="/assets/img/img-page-1/img-lobby.png" alt="img" class="our-gallery__img-lobby" />
+      </div>
+
+      <div class="our-gallery__dining-area">
+        <img src="/assets/img/img-page-1/img-dining-area.png" alt="img" class="our-gallery__img-dining-area" />
+      </div>
+
+      <div class="our-gallery__bathroom-mirror">
+        <img src="/assets/img/img-page-1/img-bathroom-mirror.png" alt="img" class="our-gallery__img-bathroom-mirror" />
+      </div>
+
+
+      <div class="our-gallery__background-text">
+        <img src="/assets/img/img-page-1/img-hotel-Bank.png" alt="img Bank hotel"
+          class="our-gallery__background-text-img">
+      </div>
+
     </div>
-  </body>
+
+
+    <footer class="footer">
+      <div class="footer__get-in-touch">
+        <span class="footer__phone-number">+38 032 297 50 20</span>
+        <p class="footer__address">8 Lystopadovoho Chynu,Lviv</p>
+        <div class="footer__get-in">Get in</div>
+        <div class="footer__touch">touch</div>
+        <div class="footer__star">
+          <img src="/assets/img/img-page-1/img-middle-star.png" alt="img" class="footer__img-star">
+        </div>
+        <div class="footer__couch">
+          <img src="/assets/img/img-page-1/img-couch.png" alt="img" class="footer__img-couch">
+        </div>
+
+      </div>
+
+      <div class="footer__form">
+        <p class="footer__form-name">Find a room</p>
+
+      </div>
+
+
+
+
+
+      <div class="footer__short-information">
+
+
+        <div class="footer__about-us">
+          <h6 class="footer__about-us-title">/About us</h6>
+          <p class="footer__about-us-text">The five-star hotel in a beautiful European city with a modern restaurant,
+            conference-hall, and art-bar.</p>
+          <p class="footer__company-rights">©2021 All rights reserved. BankHotel</p>
+        </div>
+
+
+        <div class="footer__news">
+          <h6 class="footer__news-title">/News</h6>
+          <p class="footer__news-text">Sign up to our newsletter not to miss exclusive offers and information about the
+            upcoming events.</p>
+          <form>
+            <input type="email">
+            <button type="submit"></button>
+          </form>
+        </div>
+
+        <div class="footer__social">
+          <h6 class="footer__social-title">/Social</h6>
+          <ul class="footer__social-networks">
+            <li class="footer__facebook"><a href="#" class="footer__facebook-link">Facebook</a></li>
+            <li class="footer__instagram"><a href="#" class="footer__instagram-link">Instagram</a></li>
+            <li class="footer__twitter"><a href="#" class="footer__twitter-link">twitter</a></li>
+          </ul>
+        </div>
+
+
+      </div>
+
+
+
+    </footer>
+
+  </div>
+</body>
+
 </html>
