everything is done

--- a/index-page-1.html
+++ b/index-page-1.html
@@ -38,27 +38,25 @@
           <h2 class="header__title-1">Bank</h2>
           <h2 class="header__title-2">Hotel</h2>
         </div>
-        <button class="header__button"><p>since 1973</p></button>
+        <button class="header__button">since 1973</button>
         <p class="header__desc">
           rooms // restaurant // congress hall // wine bar
         </p>
-        <hr />
         <p class="header__text">
           The luxurious hotel in the most beautiful European city with an
           exclusive restaurant, conference-hall, and art-bar.
         </p>
       </div>
-
       <div class="hd-container">
         <div class="hd-container__list">
           <button class="hd-container__btn hd-container__btn_first">
-            <p>Check in</p>
+            Check in
           </button>
           <button class="hd-container__btn hd-container__btn_second">
-            <p>Check out</p>
+            Check out
           </button>
           <button class="hd-container__btn hd-container__btn_orange">
-            <p>book room</p>
+            book room
           </button>
           <a href="#" class="hd-container__btn375"><p>book room</p></a>
         </div>
@@ -106,12 +104,11 @@
             alt="room"
           />
           <button class="about__btn">
-            <p class="about__des about__des_orange">Rooms</p>
-            <p class="about__des">and</p>
-            <p class="about__des">apartments</p>
+            and apartments
             <img
               class="about__arrow"
               src="./assets/img/img-page-1/label-arrow-bottom.png"
+              alt="arrow_down"
             />
           </button>
         </div>
@@ -122,6 +119,139 @@
           We offer luxurious rooms, numerous facilities, and exceptional
           service.
         </p>
+      </div>
+    </div>
+
+    <div class="rooms">
+      <p class="rooms__quantity">70 rooms</p>
+      <div class="rooms__wrap">
+        <h2 class="rooms__title">Rooms & apartments</h2>
+        <p class="rooms__desc">
+          All room decoration was made with ecological certified and safe
+          materials.
+        </p>
+        <img
+          class="rooms__image"
+          src="./assets/img/img-page-1/img-bench.png"
+          alt="bench"
+        />
+        <button class="rooms__btn">since 1973</button>
+        <div class="rooms__bedroom">
+          <img
+            class="rooms__bedroom-btn"
+            src="./assets/img/img-page-1/button-book_room.png"
+            alt="button_bedroom"
+          />
+        </div>
+        <button class="rooms__btn-arrow">
+          <img
+            class="rooms__btn-img"
+            src="./assets/img/img-page-1/btn-octagon-arrow-right.png"
+            alt="button_next_page"
+          />
+        </button>
+        <div class="rooms__info">
+          <h3 class="rooms__subtitle">Superior Twin</h3>
+          <p class="rooms__text">
+            The Superior twin is perfect for those who plan to stay long. The
+            spacious and bright room is equipped with deluxe Italian furniture
+            and has a beautiful view to the historical part of the city. Stylish
+            interior design and comfortable beds will make your stay cozy and
+            pleasant.
+          </p>
+          <p class="rooms__page">/ 04</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="faci-lities">
+      <p class="faci-lities__desc">Art & Congress hall</p>
+      <div class="faci-lities__title">
+        <h2 class="faci-lities__title-part1">Our faci</h2>
+        <h2 class="faci-lities__title-part2">lities</h2>
+      </div>
+      <div class="faci-lities__barman">
+        <img
+          class="faci-lities__barman-lable"
+          src="./assets/img/img-page-1/label-bank-hotel-premium-room.png"
+          alt="lable"
+        />
+      </div>
+      <div class="faci-lities__cook">
+        <img
+          class="faci-lities__cook-pic"
+          src="./assets/img/img-page-1/img-cook.png"
+          alt="cook"
+        />
+      </div>
+      <p class="faci-lities__text">
+        Bank Hotel offers you a wide range of additional services and
+        facilities. Visit our restaurant to try exclusive meals, book a
+        conference hall to organize a business meeting, or relax in the art-bar.
+      </p>
+    </div>
+
+    <div class="restaurant">
+      <div class="restaurant__wrap">
+        <button class="restaurant__btn">
+          <img
+            class="restaurant__btn-image"
+            src="./assets/img/img-page-1/btn-octagon-arrow-down.png"
+            alt="button_next_page"
+          />
+        </button>
+        <p class="restaurant__page">01</p>
+        <h3 class="restaurant__name">Ice Restaurant</h3>
+        <p class="restaurant__text">
+          The hotel’s exclusive infrastructure is complemented by the unique
+          atmosphere of the Safe Restaurant. Author’s menu, extensive wine card,
+          and live music will set you for the correct mood.
+        </p>
+        <div class="restaurant__pic">
+          <img
+            class="restaurant__image"
+            src="./assets/img/img-page-1/img-safe-restaurant-small.png"
+            alt="restaurant"
+          />
+        </div>
+      </div>
+      <p class="restaurant__desc">hall</p>
+    </div>
+
+    <div class="page">
+      <div class="page__numder-one">
+        <div class="page__image-wrap">
+          <img
+            class="page__image"
+            src="./assets/img/img-page-1/img-conference-hall.png"
+            alt="conference-hall"
+          />
+        </div>
+        <p class="page__number">02</p>
+        <h3 class="page__name">Conference Hall</h3>
+        <button class="page__btn">
+          <img
+            src="./assets/img/img-page-1/btn-arrow.png"
+            alt="button_next_page"
+          />
+        </button>
+      </div>
+      <div class="page__number-two">
+        <div class="page__image-wrap">
+          <img
+            class="page__image"
+            src="./assets/img/img-page-1/img-wine-bar.png"
+            alt="bar"
+          />
+        </div>
+        <p class="page__number">03</p>
+        <h3 class="page__name">Wine bar “reserve”</h3>
+        <button class="page__btn">
+          <img
+            src="./assets/img/img-page-1/btn-arrow.png"
+            alt="button_next_page"
+          />
+        </button>
       </div>
     </div>
 
