added  adaptive 1440px

--- a/index-page-1.html
+++ b/index-page-1.html
@@ -78,6 +78,7 @@
     </div>
   </header>
 
+
   <div class="about">
     <div class="about__wrap">
       <img class="about__room about__room_big" src="./assets/img/img-page-1/img-peception-1.png" alt="room" />
@@ -144,6 +145,7 @@
           decorated with modern art pieces that will make your stay
           unforgettable.
         </p>
+
         <div class="our-gallery__fireplace">
           <img src="/assets/img/img-page-1/img-fireplace.png" alt="img" class="our-gallery__img-fireplace" />
         </div>
@@ -166,6 +168,10 @@
 
       <div class="our-gallery__lobby">
         <img src="/assets/img/img-page-1/img-lobby.png" alt="img" class="our-gallery__img-lobby" />
+      </div>
+
+      <div class="our-gallery__reception">
+        <img src="/assets/img/img-page-1/img-reception.png" alt="img" class="our-gallery__img-reception" />
       </div>
 
       <div class="our-gallery__dining-area">
@@ -202,7 +208,14 @@
 
       <div class="footer__form">
         <p class="footer__form-name">Find a room</p>
-
+        <div class="search-form">
+          <button class="search-form__btn search-form__check-in check-in">Check in
+          </button>
+          <button class="search-form__btn search-form__check-out check-out">Check out
+          </button>
+          <button class="search-form__btn search-form__book-room">book room
+          </button>
+        </div>
       </div>
 
 
@@ -213,29 +226,32 @@
 
 
         <div class="footer__about-us">
-          <h6 class="footer__about-us-title">/About us</h6>
-          <p class="footer__about-us-text">The five-star hotel in a beautiful European city with a modern restaurant,
+          <h6 class="footer__title"><span class="footer__title-slash">/</span>About us</h6>
+          <p class="footer__text footer__about-us-text">The five-star hotel in a beautiful European city with a modern
+            restaurant,
             conference-hall, and art-bar.</p>
           <p class="footer__company-rights">©2021 All rights reserved. BankHotel</p>
         </div>
 
 
         <div class="footer__news">
-          <h6 class="footer__news-title">/News</h6>
-          <p class="footer__news-text">Sign up to our newsletter not to miss exclusive offers and information about the
+          <h6 class="footer__title"><span class="footer__title-slash">/</span>News</h6>
+          <p class="footer__text footer__news-text">Sign up to our newsletter not to miss exclusive offers and
+            information about
+            the
             upcoming events.</p>
-          <form>
-            <input type="email">
-            <button type="submit"></button>
+          <form class="footer__email-form">
+            <input class="footer__email" type="email" placeholder="EMAIL">
+            <button class="footer__email-form-btn" type="submit">&rarr;</button>
           </form>
         </div>
 
         <div class="footer__social">
-          <h6 class="footer__social-title">/Social</h6>
+          <h6 class="footer__title"><span class="footer__title-slash">/</span>Social</h6>
           <ul class="footer__social-networks">
-            <li class="footer__facebook"><a href="#" class="footer__facebook-link">Facebook</a></li>
-            <li class="footer__instagram"><a href="#" class="footer__instagram-link">Instagram</a></li>
-            <li class="footer__twitter"><a href="#" class="footer__twitter-link">twitter</a></li>
+            <li class="footer__facebook"><a href="#" class="footer__link">Facebook</a></li>
+            <li class="footer__instagram"><a href="#" class="footer__link">Instagram</a></li>
+            <li class="footer__twitter"><a href="#" class="footer__link">twitter</a></li>
           </ul>
         </div>
 
