--- a/index-page-1.html
+++ b/index-page-1.html
@@ -58,7 +58,7 @@
           book room
         </button>
         <a href="#" class="hd-container__btn375">
-          <p>book room</p>
+          <p class="hd-container__btn375-book-room">book room</p>
         </a>
       </div>
       <div class="hd-container__contacts">
@@ -72,137 +72,138 @@
     </div>
   </header>
 
-  <div class="about">
-    <div class="about__wrap">
-      <img class="about__room about__room_big" src="./assets/img/img-page-1/img-peception-1.png" alt="room" />
-      <div class="about__info">
-        <div class="about__name">
-          <h2 class="about__name-about">About</h2>
-          <h2 class="about__name-us">US</h2>
+  <main class="main">
+    <div class="about">
+      <div class="about__wrap">
+        <img class="about__room about__room_big" src="./assets/img/img-page-1/img-reception-1.png" alt="room" />
+        <div class="about__info">
+          <div class="about__name">
+            <h2 class="about__name-about">About</h2>
+            <h2 class="about__name-us">US</h2>
+          </div>
+          <h3 class="about__subtitle">High quality</h3>
+          <p class="about__text about__text_big">
+            The five-star Bank Hotel was reopened to visitors in 2016. The building
+            was renovated and modernized to meet the expectations of the most
+            demanding guests. We offer luxurious rooms, numerous facilities, and
+            exceptional service.
+          </p>
+          <p class="about__text about__text_small">
+            The hotel was reopened to visitors in 2016. The building was renovated
+            and modernized to meet the expectations of the most demanding guests. We
+            offer luxurious rooms, numerous facilities, and exceptional service.
+          </p>
         </div>
-        <h3 class="about__subtitle">High quality</h3>
-        <p class="about__text about__text_big">
-          The five-star Bank Hotel was reopened to visitors in 2016. The building
-          was renovated and modernized to meet the expectations of the most
-          demanding guests. We offer luxurious rooms, numerous facilities, and
-          exceptional service.
-        </p>
-        <p class="about__text about__text_small">
-          The hotel was reopened to visitors in 2016. The building was renovated
-          and modernized to meet the expectations of the most demanding guests. We
-          offer luxurious rooms, numerous facilities, and exceptional service.
+        <div class="about__pic-btn">
+          <img class="about__room about__room_small" src="./assets/img/img-page-1/img-reception-2.png" alt="room" />
+          <button class="about__btn">
+            and apartments
+            <img class="about__arrow" src="./assets/img/img-page-1/label-arrow-bottom.png" alt="arrow_down" />
+          </button>
+        </div>
+        <h3 class="about__subtitle about__subtitle_last">High quality</h3>
+        <p class="about__text about__text_last">
+          The hotel was reopened to visitors in 2016. The building was renovated and
+          modernized to meet the expectations of the most demanding guests. We offer
+          luxurious rooms, numerous facilities, and exceptional service.
         </p>
       </div>
-      <div class="about__pic-btn">
-        <img class="about__room about__room_small" src="./assets/img/img-page-1/img-peception-2.png" alt="room" />
-        <button class="about__btn">
-          and apartments
-          <img class="about__arrow" src="./assets/img/img-page-1/label-arrow-bottom.png" alt="arrow_down" />
+    </div>
+
+    <div class="rooms">
+      <p class="rooms__quantity">70 rooms</p>
+      <div class="rooms__wrap">
+        <h2 class="rooms__title">Rooms & apartments</h2>
+        <p class="rooms__desc">
+          All room decoration was made with ecological certified and safe materials.
+        </p>
+        <img class="rooms__image" src="./assets/img/img-page-1/img-bench.png" alt="bench" />
+        <button class="rooms__btn">since 1973</button>
+        <div class="rooms__bedroom">
+          <img class="rooms__bedroom-btn" src="./assets/img/img-page-1/button-book_room.png" alt="button_bedroom" />
+        </div>
+        <button class="rooms__btn-arrow">
+          <img class="rooms__btn-img" src="./assets/img/img-page-1/btn-octagon-arrow-right.png"
+            alt="button_next_page" />
+        </button>
+        <div class="rooms__info">
+          <h3 class="rooms__subtitle">Superior Twin</h3>
+          <p class="rooms__text">
+            The Superior twin is perfect for those who plan to stay long. The
+            spacious and bright room is equipped with deluxe Italian furniture and
+            has a beautiful view to the historical part of the city. Stylish
+            interior design and comfortable beds will make your stay cozy and
+            pleasant.
+          </p>
+          <p class="rooms__page">/ 04</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="faci-lities">
+      <p class="faci-lities__desc">Art & Congress hall</p>
+      <div class="faci-lities__title">
+        <h2 class="faci-lities__title-part1">Our faci</h2>
+        <h2 class="faci-lities__title-part2">lities</h2>
+      </div>
+      <div class="faci-lities__barman">
+        <img class="faci-lities__barman-lable" src="./assets/img/img-page-1/label-bank-hotel-premium-room.png"
+          alt="lable" />
+      </div>
+      <div class="faci-lities__cook">
+        <img class="faci-lities__cook-pic" src="./assets/img/img-page-1/img-cook.png" alt="cook" />
+      </div>
+      <p class="faci-lities__text">
+        Bank Hotel offers you a wide range of additional services and facilities.
+        Visit our restaurant to try exclusive meals, book a conference hall to
+        organize a business meeting, or relax in the art-bar.
+      </p>
+    </div>
+
+    <div class="restaurant">
+      <div class="restaurant__wrap">
+        <button class="restaurant__btn">
+          <img class="restaurant__btn-image" src="./assets/img/img-page-1/btn-octagon-arrow-down.png"
+            alt="button_next_page" />
+        </button>
+        <p class="restaurant__page">01</p>
+        <h3 class="restaurant__name">Ice Restaurant</h3>
+        <p class="restaurant__text">
+          The hotel’s exclusive infrastructure is complemented by the unique
+          atmosphere of the Safe Restaurant. Author’s menu, extensive wine card, and
+          live music will set you for the correct mood.
+        </p>
+        <div class="restaurant__pic">
+          <img class="restaurant__image" src="./assets/img/img-page-1/img-safe-restaurant-small.png" alt="restaurant" />
+        </div>
+      </div>
+      <p class="restaurant__desc">hall</p>
+    </div>
+
+    <div class="page">
+      <div class="page__numder-one">
+        <div class="page__image-wrap">
+          <img class="page__image" src="./assets/img/img-page-1/img-conference-hall.png" alt="conference-hall" />
+        </div>
+        <p class="page__number">02</p>
+        <h3 class="page__name">Conference Hall</h3>
+        <button class="page__btn">
+          <img src="./assets/img/img-page-1/btn-arrow.png" alt="button_next_page" />
         </button>
       </div>
-      <h3 class="about__subtitle about__subtitle_last">High quality</h3>
-      <p class="about__text about__text_last">
-        The hotel was reopened to visitors in 2016. The building was renovated and
-        modernized to meet the expectations of the most demanding guests. We offer
-        luxurious rooms, numerous facilities, and exceptional service.
-      </p>
-    </div>
-  </div>
-
-  <div class="rooms">
-    <p class="rooms__quantity">70 rooms</p>
-    <div class="rooms__wrap">
-      <h2 class="rooms__title">Rooms & apartments</h2>
-      <p class="rooms__desc">
-        All room decoration was made with ecological certified and safe materials.
-      </p>
-      <img class="rooms__image" src="./assets/img/img-page-1/img-bench.png" alt="bench" />
-      <button class="rooms__btn">since 1973</button>
-      <div class="rooms__bedroom">
-        <img class="rooms__bedroom-btn" src="./assets/img/img-page-1/button-book_room.png" alt="button_bedroom" />
-      </div>
-      <button class="rooms__btn-arrow">
-        <img class="rooms__btn-img" src="./assets/img/img-page-1/btn-octagon-arrow-right.png" alt="button_next_page" />
-      </button>
-      <div class="rooms__info">
-        <h3 class="rooms__subtitle">Superior Twin</h3>
-        <p class="rooms__text">
-          The Superior twin is perfect for those who plan to stay long. The
-          spacious and bright room is equipped with deluxe Italian furniture and
-          has a beautiful view to the historical part of the city. Stylish
-          interior design and comfortable beds will make your stay cozy and
-          pleasant.
-        </p>
-        <p class="rooms__page">/ 04</p>
+      <div class="page__number-two">
+        <div class="page__image-wrap">
+          <img class="page__image" src="./assets/img/img-page-1/img-wine-bar.png" alt="bar" />
+        </div>
+        <p class="page__number">03</p>
+        <h3 class="page__name">Wine bar “reserve”</h3>
+        <button class="page__btn">
+          <img src="./assets/img/img-page-1/btn-arrow.png" alt="button_next_page" />
+        </button>
       </div>
     </div>
-  </div>
-
-  <div class="faci-lities">
-    <p class="faci-lities__desc">Art & Congress hall</p>
-    <div class="faci-lities__title">
-      <h2 class="faci-lities__title-part1">Our faci</h2>
-      <h2 class="faci-lities__title-part2">lities</h2>
-    </div>
-    <div class="faci-lities__barman">
-      <img class="faci-lities__barman-lable" src="./assets/img/img-page-1/label-bank-hotel-premium-room.png"
-        alt="lable" />
-    </div>
-    <div class="faci-lities__cook">
-      <img class="faci-lities__cook-pic" src="./assets/img/img-page-1/img-cook.png" alt="cook" />
-    </div>
-    <p class="faci-lities__text">
-      Bank Hotel offers you a wide range of additional services and facilities.
-      Visit our restaurant to try exclusive meals, book a conference hall to
-      organize a business meeting, or relax in the art-bar.
-    </p>
-  </div>
-
-  <div class="restaurant">
-    <div class="restaurant__wrap">
-      <button class="restaurant__btn">
-        <img class="restaurant__btn-image" src="./assets/img/img-page-1/btn-octagon-arrow-down.png"
-          alt="button_next_page" />
-      </button>
-      <p class="restaurant__page">01</p>
-      <h3 class="restaurant__name">Ice Restaurant</h3>
-      <p class="restaurant__text">
-        The hotel’s exclusive infrastructure is complemented by the unique
-        atmosphere of the Safe Restaurant. Author’s menu, extensive wine card, and
-        live music will set you for the correct mood.
-      </p>
-      <div class="restaurant__pic">
-        <img class="restaurant__image" src="./assets/img/img-page-1/img-safe-restaurant-small.png" alt="restaurant" />
-      </div>
-    </div>
-    <p class="restaurant__desc">hall</p>
-  </div>
-
-  <div class="page">
-    <div class="page__numder-one">
-      <div class="page__image-wrap">
-        <img class="page__image" src="./assets/img/img-page-1/img-conference-hall.png" alt="conference-hall" />
-      </div>
-      <p class="page__number">02</p>
-      <h3 class="page__name">Conference Hall</h3>
-      <button class="page__btn">
-        <img src="./assets/img/img-page-1/btn-arrow.png" alt="button_next_page" />
-      </button>
-    </div>
-    <div class="page__number-two">
-      <div class="page__image-wrap">
-        <img class="page__image" src="./assets/img/img-page-1/img-wine-bar.png" alt="bar" />
-      </div>
-      <p class="page__number">03</p>
-      <h3 class="page__name">Wine bar “reserve”</h3>
-      <button class="page__btn">
-        <img src="./assets/img/img-page-1/btn-arrow.png" alt="button_next_page" />
-      </button>
-    </div>
-  </div>
 
 
-  <div class="container">
     <div class="best-apartments">
       <h3 class="best-apartments__title">Best apartments</h3>
       <p class="best-apartments__text">
@@ -210,102 +211,102 @@
         materials.
       </p>
     </div>
-  </div>
 
-  <div class="our-gallery">
-    <span class="our-gallery__text-element-left">Art & Congress hall</span>
+    <div class="our-gallery">
+      <span class="our-gallery__text-element-left">Art & Congress hall</span>
 
-    <div class="our-gallery__center-section">
-      <div class="our-gallery__logo">
-        <img src="/assets/img/img-page-1/label-premim-rooms.png" alt="logo" class="our-gallery__img-logo" />
+      <div class="our-gallery__center-section">
+        <div class="our-gallery__logo">
+          <img src="/assets/img/img-page-1/label-premim-rooms.png" alt="logo" class="our-gallery__img-logo" />
+        </div>
+        <h3 class="our-gallery__title">our Gallery</h3>
+        <p class="our-gallery__text-element">
+          Explore our spacious rooms with the gorgeous view to the historical
+          part of the city. Each room has an exclusive interior design
+          decorated with modern art pieces that will make your stay
+          unforgettable.
+        </p>
+
+        <div class="our-gallery__fireplace">
+          <img src="/assets/img/img-page-1/img-fireplace.png" alt="img" class="our-gallery__img-fireplace" />
+        </div>
+
+        <div class="our-gallery__octagon-text-large-screen">
+          <img src="/assets/img/img-page-1/label-octagon-yellow.png" alt="img"
+            class="our-gallery__label-octagon-yellow" />
+          <p class="our-gallery__text-element-near-octagon">
+            It is our pleasure to meet your most unrealistic expectations.
+          </p>
+        </div>
       </div>
-      <h3 class="our-gallery__title">our Gallery</h3>
-      <p class="our-gallery__text-element">
-        Explore our spacious rooms with the gorgeous view to the historical
-        part of the city. Each room has an exclusive interior design
-        decorated with modern art pieces that will make your stay
-        unforgettable.
-      </p>
 
-      <div class="our-gallery__fireplace">
-        <img src="/assets/img/img-page-1/img-fireplace.png" alt="img" class="our-gallery__img-fireplace" />
-      </div>
-
-      <div class="our-gallery__octagon-text-large-screen">
+      <div class="our-gallery__octagon-text-small-screen">
         <img src="/assets/img/img-page-1/label-octagon-yellow.png" alt="img"
           class="our-gallery__label-octagon-yellow" />
         <p class="our-gallery__text-element-near-octagon">
           It is our pleasure to meet your most unrealistic expectations.
         </p>
       </div>
+
+
+
+
+      <div class="our-gallery__bench">
+        <img src="/assets/img/img-page-1/img-bench.png" alt="img" class="our-gallery__img-bench" />
+      </div>
+
+      <div class="our-gallery__lobby">
+        <img src="/assets/img/img-page-1/img-lobby.png" alt="img" class="our-gallery__img-lobby" />
+      </div>
+
+      <div class="our-gallery__lobby-2">
+        <img src="/assets/img/img-page-1/img-lobby-2.png" alt="img" class="our-gallery__img-lobby-2" />
+      </div>
+
+      <div class="our-gallery__lobby-3">
+        <img src="/assets/img/img-page-1/img-lobby-3.png" alt="img" class="our-gallery__img-lobby-3" />
+      </div>
+
+      <div class="our-gallery__reception">
+        <img src="/assets/img/img-page-1/img-reception.png" alt="img" class="our-gallery__img-reception" />
+      </div>
+
+      <div class="our-gallery__dining-area">
+        <img src="/assets/img/img-page-1/img-dining-area.png" alt="img" class="our-gallery__img-dining-area" />
+      </div>
+
+      <div class="our-gallery__bathroom-mirror">
+        <img src="/assets/img/img-page-1/img-bathroom-mirror.png" alt="img" class="our-gallery__img-bathroom-mirror" />
+      </div>
+
+
+
+      <div class="our-gallery__reception-1">
+        <img src="/assets/img/img-page-1/img-reception-1.png" alt="img" class="our-gallery__img-reception-1" />
+      </div>
+
+      <div class="our-gallery__green-chair">
+        <img src="/assets/img/img-page-1/img-green-chair.png" alt="img" class="our-gallery__img-green-chair" />
+      </div>
+
+      <div class="our-gallery__bathroom">
+        <img src="/assets/img/img-page-1/img-bathroom.png" alt="img" class="our-gallery__img-bathroom" />
+      </div>
+
+
+
+
+
+
+
+
+      <div class="our-gallery__background-text">
+        <img src="/assets/img/img-page-1/img-hotel-Bank.png" alt="img Bank hotel"
+          class="our-gallery__background-text-img">
+      </div>
+
     </div>
-
-    <div class="our-gallery__octagon-text-small-screen">
-      <img src="/assets/img/img-page-1/label-octagon-yellow.png" alt="img" class="our-gallery__label-octagon-yellow" />
-      <p class="our-gallery__text-element-near-octagon">
-        It is our pleasure to meet your most unrealistic expectations.
-      </p>
-    </div>
-
-
-
-
-    <div class="our-gallery__bench">
-      <img src="/assets/img/img-page-1/img-bench.png" alt="img" class="our-gallery__img-bench" />
-    </div>
-
-    <div class="our-gallery__lobby">
-      <img src="/assets/img/img-page-1/img-lobby.png" alt="img" class="our-gallery__img-lobby" />
-    </div>
-
-    <div class="our-gallery__lobby-2">
-      <img src="/assets/img/img-page-1/img-lobby-2.png" alt="img" class="our-gallery__img-lobby-2" />
-    </div>
-
-    <div class="our-gallery__lobby-3">
-      <img src="/assets/img/img-page-1/img-lobby-3.png" alt="img" class="our-gallery__img-lobby-3" />
-    </div>
-
-    <div class="our-gallery__reception">
-      <img src="/assets/img/img-page-1/img-reception.png" alt="img" class="our-gallery__img-reception" />
-    </div>
-
-    <div class="our-gallery__dining-area">
-      <img src="/assets/img/img-page-1/img-dining-area.png" alt="img" class="our-gallery__img-dining-area" />
-    </div>
-
-    <div class="our-gallery__bathroom-mirror">
-      <img src="/assets/img/img-page-1/img-bathroom-mirror.png" alt="img" class="our-gallery__img-bathroom-mirror" />
-    </div>
-
-
-
-    <div class="our-gallery__reception-1">
-      <img src="/assets/img/img-page-1/img-reception-1.png" alt="img" class="our-gallery__img-reception-1" />
-    </div>
-
-    <div class="our-gallery__green-chair">
-      <img src="/assets/img/img-page-1/img-green-chair.png" alt="img" class="our-gallery__img-green-chair" />
-    </div>
-
-    <div class="our-gallery__bathroom">
-      <img src="/assets/img/img-page-1/img-bathroom.png" alt="img" class="our-gallery__img-bathroom" />
-    </div>
-
-
-
-
-
-
-
-
-    <div class="our-gallery__background-text">
-      <img src="/assets/img/img-page-1/img-hotel-Bank.png" alt="img Bank hotel"
-        class="our-gallery__background-text-img">
-    </div>
-
-  </div>
-
+  </main>
 
   <footer class="footer">
     <div class="footer__get-in-touch">
